--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   },
   "dependencies": {
     "element-plus": "^2.2.6",
-    "vue": "^3.2.25",
+    "vue": "^3.2.37",
+    "vue-demi": "^0.14.10",
     "vue-final-modal": "^3.4.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@vitejs/plugin-vue": "^5.1.4",
     "adm-zip": "^0.5.9",
     "fs-extra": "^10.1.0",
     "typescript": "^4.5.4",
-    "unplugin-auto-import": "^0.9.3",
-    "unplugin-vue-components": "^0.21.1",
-    "vite": "^2.9.9",
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.10",
     "vue-tsc": "^0.34.7"
   }
 }
